--- a/index.html
+++ b/index.html
@@ -2,11 +2,84 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no, viewport-fit=cover">
+    <meta name="referrer" content="no-referrer">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>jdjr-web</title>
+    <style media="screen">
+      html a {
+        color: blue;
+        cursor: pointer;
+        margin: 20px 10px;
+      }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+      <div id="app"></div>
+      <!-- built files will be auto injected -->
+    <!-- <div id="app"></div>
+    <a class="api a">a.html</a>
+    <a class="api b">b.html</a>
+
+    <script>
+      注册路由
+      document.querySelectorAll(".api").forEach( item => {
+        item.addEventListener('click', (e) => {
+          e.preventDefault();
+          let link = item.textContent;
+          window.history.pushState({name: 'api'}, link, link);
+        }, false)
+      })
+
+      监听路由
+      window.addEventListener('popstate', (e) => {
+        console.log({
+          location: location.href,
+          state: e.state
+        })
+      })
+    </script>
+
+    <h3>Hash</h3>
+    <a class="hash a">#a.html</a>
+    <a class="hash b">#b.html</a>
+
+    <script>
+      注册路由
+      document.querySelectorAll(".hash").forEach( item => {
+        item.addEventListener('click', (e) => {
+          e.preventDefault();
+          let link = item.textContent;
+          location.hash = link;
+        }, false)
+      })
+
+      监听路由
+      window.addEventListener('hashchange', (e) => {
+        console.log({
+          location: location.href,
+          hash: location.hash
+        })
+      })
+    </script> -->
+    
+    <!-- 这里设置的比例是100px=1rem -->
+    <script>
+        fnResize()
+          window.onresize = function () {
+          fnResize()
+        }
+        function fnResize() {
+          var deviceWidth = document.documentElement.clientWidth || window.innerWidth
+          if (deviceWidth >= 750) {
+            deviceWidth = 750
+          }
+          if (deviceWidth <= 320) {
+            deviceWidth = 320
+          }
+          document.documentElement.style.fontSize = (deviceWidth / 7.5) + 'px'
+        }
+      </script>
   </body>
 </html>
